apps/staging/n8n/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: n8n
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: n8n.dev.myrobertson.net
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  gatewayClassName: istio
  listeners:
    - name: n8n
      hostname: n8n.dev.myrobertson.net
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: n8n-cert
  infrastructure:
    labels:
      istio-injection: enabled
    annotations:
      external-dns.alpha.kubernetes.io/hostname: n8n.dev.myrobertson.net
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  parentRefs:
    - name: n8n
  hostnames: ["n8n.dev.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-main
          port: 5678
