apps/staging/n8n/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
  hostnames: ["n8n.staging.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-main
          port: 5678
