apps/staging/n8n/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-n8n
  namespace: default
spec:
  targetRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: myrobertson-com-gateway
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            notPaths:
              - /webhook
              - /webhook/*
              - /webhook-test
              - /webhook-test/*
              - /webhook-waiting
              - /webhook-waiting/*
            hosts:
              - n8n.staging.myrobertson.net
